--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "at-grid",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "AtGrid",
   "main": "at-grid.umd.js",
   "jsnext:main": "at-grid.esm.js",
@@ -14,7 +14,8 @@
     "tsc-es": "tsc -p tsconfig-es.json",
     "tsc-commonjs": "tsc",
     "rollup-umd": "rollup -c rollup.config.umd.js",
-    "rollup-es": "rollup -c rollup.config.esm.js"
+    "rollup-es": "rollup -c rollup.config.esm.js",
+    "publish": "cd ./dist && npm publish"
   },
   "repository": {
     "type": "git",
