--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "at-grid",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "AtGrid",
   "main": "at-grid.umd.js",
   "jsnext:main": "at-grid.esm.js",
   "module": "at-grid.esm.js",
-  "types": "at-grid.d.ts",
+  "types": "at-grid-source.d.ts",
+  "typings": "at-grid-source.d.ts",
   "scripts": {
     "copy": "node tools/copy-package.js && node tools/cleanup-package.js",
-    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && tsc",
+    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && ngc",
     "postbundle": "node tools/removecode.js",
     "build": "npm run bundle && npm run copy && npm run postbundle",
     "tsc-es": "tsc -p tsconfig-es.json",
-    "tsc-commonjs": "tsc",
+    "ngc-es": "ngc -p tsconfig-es.json",
+    "tsc": "tsc",
+    "ngc": "ngc",
     "rollup-umd": "rollup -c rollup.config.umd.js",
     "rollup-es": "rollup -c rollup.config.esm.js",
     "publish": "cd ./dist && npm publish"
