--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "at-grid",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "AtGrid",
   "main": "at-grid.umd.js",
   "jsnext:main": "at-grid.esm.js",
@@ -42,6 +42,7 @@
     "@angular/compiler-cli": "^4.2.6",
     "@types/node": "^8.0.11",
     "del": "^2.2.2",
+    "rimraf": "^2.5.4",
     "node-sass": "^4.5.3",
     "rollup": "^0.45.2",
     "rollup-plugin-angular": "^0.4.4",
