Добавлена поддержка картинок в гриде

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 
   "angularCompilerOptions": {
     "genDir": "./dist",
-    "skipMetadataEmit" : false
+    "skipMetadataEmit" : false,
+    "strictMetadataEmit" : true
   }
 }
