--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "at-grid",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "AtGrid",
   "main": "at-grid.umd.js",
   "jsnext:main": "at-grid.esm.js",
-  "module": "at-grid.esm.js",
+  "module": "at-grid-source.js",
   "types": "at-grid-source.d.ts",
   "typings": "at-grid-source.d.ts",
   "scripts": {
     "copy": "node tools/copy-package.js && node tools/cleanup-package.js",
-    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && ngc",
+    "bundle": "rollup -c rollup.config.umd.js",
     "postbundle": "node tools/removecode.js",
-    "build": "npm run bundle && npm run copy && npm run postbundle",
-    "tsc-es": "tsc -p tsconfig-es.json",
+    "build": "rimraf dist && npm run bundle && npm run copy && npm run gulp-inline-templates && npm run ngc-es && npm run postbundle",
     "ngc-es": "ngc -p tsconfig-es.json",
-    "tsc": "tsc",
-    "ngc": "ngc",
-    "rollup-umd": "rollup -c rollup.config.umd.js",
-    "rollup-es": "rollup -c rollup.config.esm.js",
-    "publish": "cd ./dist && npm publish"
+    "publish": "cd ./dist && npm publish",
+    "npm-link": "cd ./dist && npm link",
+    "gulp-inline-templates": "rimraf tmp && gulp inline-templates"
   },
   "repository": {
     "type": "git",
@@ -42,8 +39,10 @@
     "@angular/compiler-cli": "^4.2.6",
     "@types/node": "^8.0.11",
     "del": "^2.2.2",
-    "rimraf": "^2.5.4",
+    "gulp": "^3.9.1",
+    "gulp-inline-ng2-template": "^4.0.0",
     "node-sass": "^4.5.3",
+    "rimraf": "^2.5.4",
     "rollup": "^0.45.2",
     "rollup-plugin-angular": "^0.4.4",
     "rollup-plugin-commonjs": "^8.0.2",
