--- a/tsconfig-es.json
+++ b/tsconfig-es.json
@@ -11,7 +11,7 @@
     "lib": ["es2015", "dom"]
   },
 
-  "files": ["./lib/at-grid-source.ts"],
+  "files": ["./tmp/lib-inlined/at-grid-source.ts"],
 
   "exclude": [
     "node_modules"
@@ -19,6 +19,7 @@
 
   "angularCompilerOptions": {
     "genDir": "./dist",
-    "skipMetadataEmit" : false
+    "skipMetadataEmit" : false,
+    "strictMetadataEmit" : true
   }
 }
