--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-  "name": "at-grid",
-  "version": "1.0.12",
-  "description": "AtGrid",
-  "main": "at-grid.umd.js",
-  "jsnext:main": "at-grid.esm.js",
-  "module": "at-grid-source.js",
-  "types": "at-grid-source.d.ts",
-  "typings": "at-grid-source.d.ts",
-  "scripts": {
-    "copy": "node tools/copy-package.js && node tools/cleanup-package.js",
-    "bundle": "rollup -c rollup.config.umd.js",
-    "postbundle": "node tools/removecode.js",
-    "build": "rimraf dist && npm run bundle && npm run copy && npm run gulp-inline-templates && npm run ngc-es && npm run postbundle",
-    "ngc-es": "ngc -p tsconfig-es.json",
-    "publish": "cd ./dist && npm publish",
-    "npm-link": "cd ./dist && npm link",
-    "gulp-inline-templates": "rimraf tmp && gulp inline-templates"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nikolay-rogovoy/at-grid.git"
-  },
-  "keywords": [
-    "datagrid"
-  ],
-  "author": "n_g <nikolay.rogovoy@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "@angular/common": "^4.2.6",
-    "@angular/compiler": "^4.2.6",
-    "@angular/forms": "^4.2.6",
-    "@angular/core": "^4.2.6",
-    "@angular/platform-browser": "^4.2.6",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.13"
-  },
-  "devDependencies": {
-    "@angular/compiler-cli": "^4.2.6",
-    "@types/node": "^8.0.11",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-inline-ng2-template": "^4.0.0",
-    "node-sass": "^4.5.3",
-    "rimraf": "^2.5.4",
-    "rollup": "^0.45.2",
-    "rollup-plugin-angular": "^0.4.4",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-uglify": "^2.0.1",
-    "typescript": "~2.3.3"
-  },
-  "bugs": {
-    "url": "https://github.com/nikolay-rogovoy/at-grid/issues"
-  },
-  "homepage": "https://github.com/nikolay-rogovoy/at-grid#readme"
+    "name": "at-grid",
+    "version": "1.0.15",
+    "description": "AtGrid",
+    "main": "at-grid.umd.js",
+    "jsnext:main": "at-grid.esm.js",
+    "module": "at-grid-source.js",
+    "types": "at-grid-source.d.ts",
+    "typings": "at-grid-source.d.ts",
+    "scripts": {
+        "copy": "node tools/copy-package.js && node tools/cleanup-package.js",
+        "bundle": "rollup -c rollup.config.umd.js",
+        "removecode": "node tools/removecode.js",
+        "build": "rimraf dist && npm run bundle && npm run copy && npm run gulp-inline-templates && npm run ngc-es && npm run removecode",
+        "ngc-es": "ngc -p tsconfig-es.json",
+        "publish": "cd ./dist && npm publish",
+        "npm-link": "cd ./dist && npm link",
+        "gulp-inline-templates": "rimraf tmp && gulp inline-templates"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nikolay-rogovoy/at-grid.git"
+    },
+    "keywords": [
+        "datagrid"
+    ],
+    "author": "n_g <nikolay.rogovoy@gmail.com>",
+    "license": "ISC",
+    "dependencies": {
+        "@angular/common": "^5.0.2",
+        "@angular/compiler": "^5.0.2",
+        "@angular/forms": "^5.0.2",
+        "@angular/core": "^5.0.2",
+        "@angular/platform-browser": "^5.0.2",
+        "rxjs": "^5.5.2",
+        "zone.js": "^0.8.17"
+    },
+    "devDependencies": {
+        "@angular/compiler-cli": "^5.0.2",
+        "@types/node": "^8.0.11",
+        "del": "^2.2.2",
+        "gulp": "^3.9.1",
+        "gulp-inline-ng2-template": "^4.0.0",
+        "node-sass": "^4.5.3",
+        "rimraf": "^2.5.4",
+        "rollup": "^0.50.0",
+        "rollup-plugin-angular": "^0.4.4",
+        "rollup-plugin-commonjs": "^8.2.1",
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-typescript": "^0.8.1",
+        "rollup-plugin-uglify": "^2.0.1",
+        "typescript": "2.4.2"
+    },
+    "bugs": {
+        "url": "https://github.com/nikolay-rogovoy/at-grid/issues"
+    },
+    "homepage": "https://github.com/nikolay-rogovoy/at-grid#readme"
 }
