--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,27 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "sourceMap": true,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "declaration": true,
-    "outDir": "./dist",
-    "lib": ["es2015", "dom"]
-  },
-
-  "files": ["./lib/at-grid-source.ts"],
-
-  "exclude": [
-    "node_modules"
-  ],
-
-  "angularCompilerOptions": {
-    "genDir": "./dist",
-    "skipMetadataEmit" : false,
-    "strictMetadataEmit" : true
-  }
+    "compilerOptions": {
+        "target": "es5",
+        "module": "commonjs",
+        "sourceMap": true,
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "declaration": true,
+        "outDir": "./dist",
+        "lib": [
+            "es2015",
+            "dom"
+        ]
+    },
+    "files": [
+        "./lib/at-grid-source.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ],
+    "angularCompilerOptions": {
+        "genDir": "./dist",
+        "skipMetadataEmit": false,
+        "strictMetadataEmit": true
+    }
 }
