--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "at-grid",
-    "version": "1.0.15",
+    "version": "1.0.17",
     "description": "AtGrid",
     "main": "at-grid.umd.js",
     "jsnext:main": "at-grid.esm.js",
@@ -15,7 +15,8 @@
         "ngc-es": "ngc -p tsconfig-es.json",
         "publish": "cd ./dist && npm publish",
         "npm-link": "cd ./dist && npm link",
-        "gulp-inline-templates": "rimraf tmp && gulp inline-templates"
+        "gulp-inline-templates": "rimraf tmp && gulp inline-templates",
+        "copy-to-test": "cp ./dist/*.* ../at/node_modules/at-grid/"
     },
     "repository": {
         "type": "git",
@@ -27,16 +28,16 @@
     "author": "n_g <nikolay.rogovoy@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "^5.0.2",
-        "@angular/compiler": "^5.0.2",
-        "@angular/forms": "^5.0.2",
-        "@angular/core": "^5.0.2",
-        "@angular/platform-browser": "^5.0.2",
+        "@angular/common": "^5.0.0",
+        "@angular/compiler": "^5.0.0",
+        "@angular/forms": "^5.0.0",
+        "@angular/core": "^5.0.0",
+        "@angular/platform-browser": "^5.0.0",
         "rxjs": "^5.5.2",
         "zone.js": "^0.8.17"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "^5.0.2",
+        "@angular/compiler-cli": "^5.0.0",
         "@types/node": "^8.0.11",
         "del": "^2.2.2",
         "gulp": "^3.9.1",
