--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
     "author": "n_g <nikolay.rogovoy@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "^5.0.0",
-        "@angular/compiler": "^5.0.0",
-        "@angular/forms": "^5.0.0",
-        "@angular/core": "^5.0.0",
-        "@angular/platform-browser": "^5.0.0",
-        "rxjs": "^5.5.2",
-        "zone.js": "^0.8.17"
+        "@angular/common": "^6.0.0",
+        "@angular/compiler": "^6.0.0",
+        "@angular/forms": "^6.0.0",
+        "@angular/core": "^6.0.0",
+        "@angular/platform-browser": "^6.0.0",
+        "rxjs": "^6.0.0",
+        "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "^5.0.0",
-        "@types/node": "^8.0.11",
+        "@angular/compiler-cli": "^6.0.0",
+        "@types/node": "^10.9.3",
         "del": "^2.2.2",
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.0",
         "gulp-inline-ng2-template": "^4.0.0",
         "node-sass": "^4.5.3",
         "rimraf": "^2.5.4",
@@ -50,7 +50,7 @@
         "rollup-plugin-node-resolve": "^3.0.0",
         "rollup-plugin-typescript": "^0.8.1",
         "rollup-plugin-uglify": "^2.0.1",
-        "typescript": "2.4.2"
+        "typescript": "~2.7.2"
     },
     "bugs": {
         "url": "https://github.com/nikolay-rogovoy/at-grid/issues"
